<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app_color"
        tools:context=".ui.ShowImageActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_show_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_app_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:logo="@drawable/icon_back"
            app:title="@string/toolbar_title"
            app:titleMarginStart="@dimen/title_margin_start"
            app:titleTextColor="@color/tabTextColor" />

        <ImageView
            android:id="@+id/img_my_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin__layout"
            android:background="@color/background_app_color"
            app:layout_constraintBottom_toTopOf="@id/tv_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_show_image" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/tabBackGroundColor"
            android:drawableTop="@drawable/ic_share"
            android:drawableTint="@color/textview_selector"
            android:gravity="center_horizontal"
            android:text="@string/share_title"
            android:textColor="@color/textview_selector"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/line"
            app:layout_constraintStart_toStartOf="parent"
           />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_set_as_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/tabBackGroundColor"
            android:drawableTop="@drawable/ic_set_back_ground"
            android:drawableTint="@color/textview_selector"
            android:gravity="center_horizontal"
            android:text="@string/set_background_title"
            android:textColor="@color/textview_selector"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/line"
            />

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/view_size"
            android:layout_height="0dp"
            android:background="@color/image_background_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline2"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/line_margin"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>