<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app_color"
        tools:context=".ui.SettingActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/setting_title"
            app:titleTextColor="@color/tabTextColor"
            android:paddingStart="@dimen/padding_text_button"
            app:titleMarginStart="@dimen/padding_text_button"
            app:logo="@drawable/icon_back"
            android:background="@color/tabBackGroundColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <RelativeLayout
            android:id="@+id/lo_lummi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/tb_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/img_lumii_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_apps"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/padding_text_button"
            />
            <TextView
                android:id="@+id/tv_lumii"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lumii_pro"
                android:textSize="@dimen/tittle_text_size"
                android:textColor="@color/tabTextColor"
                android:layout_toRightOf="@id/img_lumii_pro"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/padding_text_button"/>
            <ImageView
                android:id="@+id/img_ic_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="@dimen/padding_text_button"/>

        </RelativeLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size"
            android:background="@color/tabBackGroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lo_lummi" />
        <RelativeLayout
            android:id="@+id/lo_language"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_setting_size"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/img_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/ic_language_black_24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/padding_text_button"
                />
            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_language"
                android:textSize="@dimen/tittle_text_size"
                android:textColor="@color/tabTextColor"
                android:layout_marginTop="@dimen/margin_top_text"
                android:layout_toRightOf="@id/img_language"
                android:paddingLeft="@dimen/padding_text_button"/>
            <TextView
                android:id="@+id/tv_choosed_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vietnam_title"
                android:textColor="@color/image_background_color"
                android:layout_toRightOf="@id/img_language"
                android:layout_below="@id/tv_language"
                android:paddingLeft="@dimen/padding_text_button"/>

        </RelativeLayout>
        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size"
            android:background="@color/tabBackGroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lo_language" />
        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_setting_size"
            android:text="@string/title_share"
            android:textColor="@color/tabTextColor"
            android:textSize="@dimen/tittle_text_size"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_share"
            android:paddingStart="@dimen/padding_text_button"
            android:drawablePadding="@dimen/padding_text_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2"/>
        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size"
            android:background="@color/tabBackGroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_share" />
        <TextView
            android:id="@+id/tv_restore"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_setting_size"
            android:text="@string/restore_title"
            android:textColor="@color/tabTextColor"
            android:textSize="@dimen/tittle_text_size"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_settings_backup_restore"
            android:paddingStart="@dimen/padding_text_button"
            android:drawablePadding="@dimen/padding_text_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line3"/>
        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size"
            android:background="@color/tabBackGroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_restore" />
        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_setting_size"
            android:text="Góp ý"
            android:textColor="@color/tabTextColor"
            android:textSize="@dimen/tittle_text_size"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_mail"
            android:paddingStart="@dimen/padding_text_button"
            android:drawablePadding="@dimen/padding_text_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line4"/>
        <View
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size"
            android:background="@color/tabBackGroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comment" />
        <TextView
            android:id="@+id/tv_security"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_setting_size"
            android:text="@string/security_title"
            android:textColor="@color/tabTextColor"
            android:textSize="@dimen/tittle_text_size"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_eye_on"
            android:paddingStart="@dimen/padding_text_button"
            android:drawablePadding="@dimen/padding_text_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line5"/>
        <View
            android:id="@+id/line6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size"
            android:background="@color/tabBackGroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_security" />
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_setting_size"
            android:text="Chính sách bảo mật"
            android:textColor="@color/tabTextColor"
            android:textSize="@dimen/tittle_text_size"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/ic_info_outline"
            android:paddingStart="@dimen/padding_text_button"
            android:drawablePadding="@dimen/padding_text_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line6"/>
        <View
            android:id="@+id/line7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_size"
            android:background="@color/tabBackGroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_version" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>